# test-docker-gcp

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
gcp-functionA/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  dockerfile.functiona  pyproject.toml  requirements.txt
gcp-functionA/gcp_functiona/: main.py
gcp-functionB/: Dockerfile  dockerfile.functionb  pyproject.toml
gcp-functionB/gcp_functionb/: main.py
